package vehiculos;

import sistemaGarage.Garage;

public class Motorcycle  extends Garage {

    private String displacement;

    public String getDisplacement() {
        return displacement;
    }

    public void setDisplacement(String displacement) {
        this.displacement = displacement;
    }
}
